# digital_vco

./: .gitignore  CMakeLists.txt  LICENSE  envelope.c  filters.c  filters.h  i2s_audio.c  i2s_audio.h  main.c  oscillators.c  oscillators.h  sine_wave.c  sine_wave.h
src/: envelope.h  filters.c  filters.h  i2s_audio.h  oscillators.c
