cmake_minimum_required(VERSION 3.12)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
# set(PICO_SDK_PATH ../pico/pico-sdk)
include(pico_sdk_import.cmake)
include(pico_extras_import.cmake)
project(digital_vco C CXX)
pico_sdk_init()
add_executable(digital_vco main.c i2s_audio.c sine_wave.c)
target_compile_definitions(digital_vco PRIVATE USE_AUDIO_I2S=1 PICO_AUDIO_I2S_MONO_INPUT=1 )
target_link_libraries(digital_vco pico_stdlib pico_audio_i2s)
pico_add_extra_outputs(digital_vco)
pico_enable_stdio_usb(digital_vco 1)